...
            android:hint="Objet de la réunion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/object_text_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>

...
            android:hint="Durée de la réunion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/start_time_text_field">

            <AutoCompleteTextView
                android:id="@+id/end_time2_text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:inputType="datetime" />

        </com.google.android.material.textfield.TextInputLayout>
...
            android:hint="Liste des participants (mails)"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choise_room_text_field">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/list_of_participants_text_field_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--select date button-->
        <Button
            android:id="@+id/select_date_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/light_blue_200"
            android:text="select date"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintTop_toBottomOf="@id/object_text_field">

        </Button>

        <!--select time button -->
        <Button
            android:id="@+id/select_time_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/light_blue_200"
            android:text="select time"
            android:textColor="@color/black"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintTop_toBottomOf="@id/date_text_field">

        </Button>

        <!--Spinner liste des salles de reunions -->
        <Spinner
            android:id="@+id/spinner_list_of_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/choise_room_text_field"
            app:layout_constraintTop_toBottomOf="@+id/end_time_text_field" />


        <!-- creer une reunion_fab -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/create_meeting_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="32dp"
            android:contentDescription="@string/content_description_createMeeting"
            android:text="Créer la reunion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_of_participants_text_field"
            />

...
