<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/filter_date"
        android:title="Filtrer par date"
        app:showAsAction="never"/>
    <item android:id="@+id/filter_room"
        android:title="Filtrer par salle"
        app:showAsAction="never"/>
    <item android:id="@+id/filter_reset"
        android:title="reset"
        app:showAsAction="never"/>

</menu>